added photo to insert
