# internal/usecases/request/election.go
@@ -4,20 +4,41 @@ import (
 	"github.com/nocturna-ta/election/pkg/utils"
 	"github.com/nocturna-ta/golib/custerr"
 	"github.com/nocturna-ta/golib/response"
+	"io"
 )
 
 type CandidateInfoRequest struct {
-	FullName           string `json:"full_name"`
-	EducationHistory   string `json:"education_history"`
-	WorkExperience     string `json:"work_experience"`
-	LegalRecordHistory string `json:"legal_record_history"`
-	PhotoPath          string `json:"photo_path"`
+	FullName         string                    `json:"full_name"`
+	EducationHistory []EducationHistoryRequest `json:"education_history"`
+	WorkExperience   []WorkHistoryRequest      `json:"work_experience"`
+	Gender           string                    `json:"gender"`
+	BirthPlace       string                    `json:"birth_place"`
+	BirthDate        string                    `json:"birth_date"`
+	Religion         string                    `json:"religion"`
+	LastEducation    string                    `json:"last_education"`
+	Job              string                    `json:"job"`
+	PhotoPath        string                    `json:"photo_path"`
+	PhotoFile        io.Reader                 `json:"photo_file"`
+	PhotoName        string                    `json:"photo_name"`
+}
+
+type EducationHistoryRequest struct {
+	InstituteName string `json:"institute_name"`
+	Year          string `json:"year"`
+}
+
+type WorkHistoryRequest struct {
+	InstituteName string `json:"institute_name"`
+	Position      string `json:"position"`
+	Year          string `json:"year"`
 }
 
 type ElectionPairRegistrationRequest struct {
 	ID                string               `json:"id"`
 	ElectionNo        string               `json:"election_no"`
 	PairPhotoPath     string               `json:"pair_photo_path"`
+	PairPhotoFile     io.Reader            `json:"pair_photo_file"`
+	PairPhotoName     string               `json:"pair_photo_name"`
 	President         CandidateInfoRequest `json:"president"`
 	VicePresident     CandidateInfoRequest `json:"vice_president"`
 	SignedTransaction string               `json:"signed_transaction"`
