# internal/usecases/response/response.go
@@ -1,11 +1,27 @@
 package response
 
 type CandidateInfoResponse struct {
-	FullName           string `json:"full_name"`
-	EducationHistory   string `json:"education_history"`
-	WorkExperience     string `json:"work_experience"`
-	LegalRecordHistory string `json:"legal_record_history"`
-	PhotoPath          string `json:"photo_path"`
+	FullName         string                     `json:"full_name"`
+	EducationHistory []EducationHistoryResponse `json:"education_history"`
+	WorkExperience   []WorkHistoryResponse      `json:"work_experience"`
+	Gender           string                     `json:"gender"`
+	BirthPlace       string                     `json:"birth_place"`
+	BirthDate        string                     `json:"birth_date"`
+	Religion         string                     `json:"religion"`
+	LastEducation    string                     `json:"last_education"`
+	Job              string                     `json:"job"`
+	PhotoPath        string                     `json:"photo_path"`
+}
+
+type EducationHistoryResponse struct {
+	InstituteName string `json:"institute_name"`
+	Year          string `json:"year"`
+}
+
+type WorkHistoryResponse struct {
+	InstituteName string `json:"institute_name"`
+	Position      string `json:"position"`
+	Year          string `json:"year"`
 }
 
 type ElectionPairResponse struct {
